examples/test/testpolicy15012.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15012
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key15: value15
      key5: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value8
          key43: value24
      podSelector:
        matchLabels:
          key26: value22
          key35: value26
          key30: value7
